# piradar

./: MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-hardware.txt  requirements.txt
docs/: .gitignore  README.md  _quarto.yml  adaptive-radar.qmd  cli-reference.qmd  client-configuration.qmd  configuration.qmd  development.qmd  direct-control.qmd  examples-adaptive.qmd  examples-zmq.qmd  examples.qmd  h5-file-format.qmd  hardware-overview.qmd  hardware-specs.qmd  index.qmd  installation.qmd  network-format.qmd  package-structure.qmd  python-api.qmd  quickstart.qmd  references.bib  register-map.qmd  requirements-docs.txt  styles.css  zmq-communication.qmd
examples/: changemode.py  frames2npy.py  radar_config.yaml
examples/client/: antenna_calibration.py  antenna_calibration.yaml  plot_range.py  plot_range_doppler.py  plot_velocity_waterfall.py  range.yaml  range_doppler.yaml  velocity_waterfall.yaml
piradar/: __init__.py  bgt60tr13c_registermap.yaml  cli.py  config.py  registermap.py  registers.py  rl_env.py
piradar/client/: __init__.py  logging_utils.py
piradar/client/communication/: __init__.py  common.py  http_client.py  radar_plot_helpers.py  zmq_client.py
piradar/client/config/: __init__.py  radar_plot_config.py
piradar/client/plotting/: __init__.py  base_plotter.py  helpers.py
piradar/client/processing/: __init__.py  multi_radar.py  peak_finder.py  processing_helpers.py
piradar/hw/: __init__.py  api.py  bgt60tr13c.py  default_config.py  discovery.py  eeprom.py  radar_controller.py  server.py  spiinterface.py  utility.py  zmq_handler.py
